# edgar-py

./: README.md  pyproject.toml
edgar-py/store/db/: crud.py  models.py
edgar-py/store/db/crud/: company.py
edgar-py/store/sec_dataloader/: dataloader_interface.py
edgar-py/store/sec_dataloader/submission_dataloader/: submission_dataloader.py
edgarpy/store/artifact/: artifact_repo.py  local_artifact_repo.py
edgarpy/store/db/: database.py  migrate.py  schemas.py
edgarpy/store/db/crud/: submission_json.py
edgarpy/store/sec_dataloader/: dataloader.py
edgarpy/store/utils/: download.py
edgarpy/utils/: validation.py
tests/store/utils/: test_download.py
tests/utils/: test_validation.py
