[tool.poetry]
name = "edgar-py"
version = "0.1.0"
description = ""
authors = ["tsugumi-sys <tidemark0105@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <4"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.44"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
